--- a/notebooks/last changes.ipynb
+++ b/notebooks/last changes.ipynb
@@ -2026,18 +2026,392 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 59,
    "id": "cb48cc10-6684-45c4-a313-cd6d13fb4f7e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df3_c.to_csv('../data/processed/Cleaned_file03final.csv')"
+    "df3_c.to_csv('../data/processed/Cleaned_file03finalv2.csv', index=False)\n",
+    "df6_c.to_csv('../data/processed/Cleaned_file06finalv2.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "292d52f0-4d2d-4cef-8a44-fa1e9e416df3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "noms = [\n",
+    "    \"Victor & Heterogeneous Griffin\",\n",
+    "    \"Heterogeneous Griffin\",\n",
+    "    \"Zoe & Lightning Bear\",\n",
+    "    \"Lightning Bear\",\n",
+    "    \"Marcus & Horus\",\n",
+    "    \"Horus\",\n",
+    "    \"Lily & Lily Queen\",\n",
+    "    \"lily queen\",\n",
+    "    \"Axel & Pollux\",\n",
+    "    \"Pollux\"\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "0f5cee88-1bb8-4c48-83fc-c70716960172",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert len(noms) == len(df6_c), \"La longueur de la liste 'noms' doit correspondre au nombre de lignes du DataFrame.\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "081e8383-81d0-47b5-8a39-9b7b5f99ffde",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df6_c[\"name\"] = noms"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "ee6b5840-0995-4e4c-883b-99029e4c5e65",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "colonnes = [\"name\"] + [col for col in df6_c.columns if col != \"name\"]\n",
+    "df6_c = df6_c[colonnes]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "b907d3b3-166b-426c-a642-c61596ec22bc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>HP</th>\n",
+       "      <th>melee attack</th>\n",
+       "      <th>Remote attack</th>\n",
+       "      <th>defense</th>\n",
+       "      <th>Support</th>\n",
+       "      <th>experience ratio</th>\n",
+       "      <th>slow walking speed</th>\n",
+       "      <th>walking speed</th>\n",
+       "      <th>running speed</th>\n",
+       "      <th>riding speed</th>\n",
+       "      <th>Handling speed</th>\n",
+       "      <th>Ignore the bluntness</th>\n",
+       "      <th>Ignore displacement</th>\n",
+       "      <th>BiologicalGrade</th>\n",
+       "      <th>endurance</th>\n",
+       "      <th>fecundity</th>\n",
+       "      <th>Type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Victor &amp; Heterogeneous Griffin</td>\n",
+       "      <td>8000.0</td>\n",
+       "      <td>130</td>\n",
+       "      <td>200</td>\n",
+       "      <td>220</td>\n",
+       "      <td>90</td>\n",
+       "      <td>30</td>\n",
+       "      <td>80</td>\n",
+       "      <td>80</td>\n",
+       "      <td>850</td>\n",
+       "      <td>1100</td>\n",
+       "      <td>465</td>\n",
+       "      <td>TRUE</td>\n",
+       "      <td>TRUE</td>\n",
+       "      <td>9</td>\n",
+       "      <td>100</td>\n",
+       "      <td>9999</td>\n",
+       "      <td>Boss de tour</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Heterogeneous Griffin</td>\n",
+       "      <td>120.0</td>\n",
+       "      <td>130</td>\n",
+       "      <td>120</td>\n",
+       "      <td>140</td>\n",
+       "      <td>90</td>\n",
+       "      <td>1</td>\n",
+       "      <td>80</td>\n",
+       "      <td>80</td>\n",
+       "      <td>850</td>\n",
+       "      <td>1200</td>\n",
+       "      <td>465</td>\n",
+       "      <td>FALSE</td>\n",
+       "      <td>FALSE</td>\n",
+       "      <td>5</td>\n",
+       "      <td>250</td>\n",
+       "      <td>60</td>\n",
+       "      <td>Boss normal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Zoe &amp; Lightning Bear</td>\n",
+       "      <td>6000.0</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>30</td>\n",
+       "      <td>80</td>\n",
+       "      <td>140</td>\n",
+       "      <td>470</td>\n",
+       "      <td>650</td>\n",
+       "      <td>287</td>\n",
+       "      <td>TRUE</td>\n",
+       "      <td>TRUE</td>\n",
+       "      <td>9</td>\n",
+       "      <td>100</td>\n",
+       "      <td>9999</td>\n",
+       "      <td>Boss de tour</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Lightning Bear</td>\n",
+       "      <td>105.0</td>\n",
+       "      <td>120</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>1</td>\n",
+       "      <td>80</td>\n",
+       "      <td>140</td>\n",
+       "      <td>470</td>\n",
+       "      <td>550</td>\n",
+       "      <td>210</td>\n",
+       "      <td>FALSE</td>\n",
+       "      <td>FALSE</td>\n",
+       "      <td>5</td>\n",
+       "      <td>100</td>\n",
+       "      <td>200</td>\n",
+       "      <td>Boss normal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Marcus &amp; Horus</td>\n",
+       "      <td>6500.0</td>\n",
+       "      <td>100</td>\n",
+       "      <td>120</td>\n",
+       "      <td>125</td>\n",
+       "      <td>90</td>\n",
+       "      <td>30</td>\n",
+       "      <td>150</td>\n",
+       "      <td>200</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>1300</td>\n",
+       "      <td>500</td>\n",
+       "      <td>TRUE</td>\n",
+       "      <td>TRUE</td>\n",
+       "      <td>9</td>\n",
+       "      <td>100</td>\n",
+       "      <td>9999</td>\n",
+       "      <td>Boss de tour</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Horus</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100</td>\n",
+       "      <td>105</td>\n",
+       "      <td>110</td>\n",
+       "      <td>90</td>\n",
+       "      <td>1</td>\n",
+       "      <td>150</td>\n",
+       "      <td>200</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>1400</td>\n",
+       "      <td>500</td>\n",
+       "      <td>FALSE</td>\n",
+       "      <td>FALSE</td>\n",
+       "      <td>5</td>\n",
+       "      <td>230</td>\n",
+       "      <td>370</td>\n",
+       "      <td>Boss normal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Lily &amp; Lily Queen</td>\n",
+       "      <td>5500.0</td>\n",
+       "      <td>100</td>\n",
+       "      <td>110</td>\n",
+       "      <td>105</td>\n",
+       "      <td>100</td>\n",
+       "      <td>30</td>\n",
+       "      <td>60</td>\n",
+       "      <td>100</td>\n",
+       "      <td>450</td>\n",
+       "      <td>650</td>\n",
+       "      <td>275</td>\n",
+       "      <td>TRUE</td>\n",
+       "      <td>TRUE</td>\n",
+       "      <td>9</td>\n",
+       "      <td>100</td>\n",
+       "      <td>9999</td>\n",
+       "      <td>Boss de tour</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>lily queen</td>\n",
+       "      <td>110.0</td>\n",
+       "      <td>100</td>\n",
+       "      <td>110</td>\n",
+       "      <td>105</td>\n",
+       "      <td>100</td>\n",
+       "      <td>1</td>\n",
+       "      <td>60</td>\n",
+       "      <td>100</td>\n",
+       "      <td>450</td>\n",
+       "      <td>550</td>\n",
+       "      <td>275</td>\n",
+       "      <td>FALSE</td>\n",
+       "      <td>FALSE</td>\n",
+       "      <td>5</td>\n",
+       "      <td>100</td>\n",
+       "      <td>250</td>\n",
+       "      <td>Boss normal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Axel &amp; Pollux</td>\n",
+       "      <td>6500.0</td>\n",
+       "      <td>100</td>\n",
+       "      <td>140</td>\n",
+       "      <td>110</td>\n",
+       "      <td>100</td>\n",
+       "      <td>30</td>\n",
+       "      <td>100</td>\n",
+       "      <td>185</td>\n",
+       "      <td>900</td>\n",
+       "      <td>1300</td>\n",
+       "      <td>542</td>\n",
+       "      <td>TRUE</td>\n",
+       "      <td>TRUE</td>\n",
+       "      <td>9</td>\n",
+       "      <td>100</td>\n",
+       "      <td>9999</td>\n",
+       "      <td>Boss de tour</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Pollux</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100</td>\n",
+       "      <td>130</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>1</td>\n",
+       "      <td>100</td>\n",
+       "      <td>185</td>\n",
+       "      <td>900</td>\n",
+       "      <td>1200</td>\n",
+       "      <td>250</td>\n",
+       "      <td>FALSE</td>\n",
+       "      <td>FALSE</td>\n",
+       "      <td>5</td>\n",
+       "      <td>100</td>\n",
+       "      <td>140</td>\n",
+       "      <td>Boss normal</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                             name      HP melee attack Remote attack defense  \\\n",
+       "0  Victor & Heterogeneous Griffin  8000.0          130           200     220   \n",
+       "1           Heterogeneous Griffin   120.0          130           120     140   \n",
+       "2            Zoe & Lightning Bear  6000.0          100           100     100   \n",
+       "3                  Lightning Bear   105.0          120           100     100   \n",
+       "4                  Marcus & Horus  6500.0          100           120     125   \n",
+       "5                           Horus   100.0          100           105     110   \n",
+       "6               Lily & Lily Queen  5500.0          100           110     105   \n",
+       "7                      lily queen   110.0          100           110     105   \n",
+       "8                   Axel & Pollux  6500.0          100           140     110   \n",
+       "9                          Pollux   100.0          100           130     100   \n",
+       "\n",
+       "  Support experience ratio slow walking speed walking speed running speed  \\\n",
+       "0      90               30                 80            80           850   \n",
+       "1      90                1                 80            80           850   \n",
+       "2     100               30                 80           140           470   \n",
+       "3     100                1                 80           140           470   \n",
+       "4      90               30                150           200          1000   \n",
+       "5      90                1                150           200          1000   \n",
+       "6     100               30                 60           100           450   \n",
+       "7     100                1                 60           100           450   \n",
+       "8     100               30                100           185           900   \n",
+       "9     100                1                100           185           900   \n",
+       "\n",
+       "  riding speed Handling speed Ignore the bluntness Ignore displacement  \\\n",
+       "0         1100            465                 TRUE                TRUE   \n",
+       "1         1200            465                FALSE               FALSE   \n",
+       "2          650            287                 TRUE                TRUE   \n",
+       "3          550            210                FALSE               FALSE   \n",
+       "4         1300            500                 TRUE                TRUE   \n",
+       "5         1400            500                FALSE               FALSE   \n",
+       "6          650            275                 TRUE                TRUE   \n",
+       "7          550            275                FALSE               FALSE   \n",
+       "8         1300            542                 TRUE                TRUE   \n",
+       "9         1200            250                FALSE               FALSE   \n",
+       "\n",
+       "  BiologicalGrade endurance fecundity          Type  \n",
+       "0               9       100      9999  Boss de tour  \n",
+       "1               5       250        60   Boss normal  \n",
+       "2               9       100      9999  Boss de tour  \n",
+       "3               5       100       200   Boss normal  \n",
+       "4               9       100      9999  Boss de tour  \n",
+       "5               5       230       370   Boss normal  \n",
+       "6               9       100      9999  Boss de tour  \n",
+       "7               5       100       250   Boss normal  \n",
+       "8               9       100      9999  Boss de tour  \n",
+       "9               5       100       140   Boss normal  "
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df6_c"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "292d52f0-4d2d-4cef-8a44-fa1e9e416df3",
+   "id": "ef45ead7-0346-4b1f-8ede-806dfbc2ca69",
    "metadata": {},
    "outputs": [],
    "source": []
