add:script to create table + streamlit 1st version

--- a/notebooks/last changes.ipynb
+++ b/notebooks/last changes.ipynb
@@ -2410,8 +2410,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "id": "ef45ead7-0346-4b1f-8ede-806dfbc2ca69",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df6_c.to_csv('../data/processed/Cleaned_file06finalv3.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4f50346b-170a-49b5-a3ae-bcd42f7162e6",
    "metadata": {},
    "outputs": [],
    "source": []
